fix: replace `get(0)` with `getFirst()` in FormUrlEncodedValidator